--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   firebase_core: ^1.20.0
   firebase_auth: ^3.4.2
   cloud_firestore: ^3.4.3
+  cloud_functions: ^3.3.4
+
+  firebase_messaging: ^13.0.3
+  firebase_storage: ^10.3.9
+  image_picker: ^0.8.5+3
+  flutter_local_notifications: ^11.0.1
 
 dev_dependencies:
   flutter_test:
